kube/components/aix/opa/aix-opa-ingress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aix-opa-ingress-policy
  namespace: aix
spec:
  podSelector:
    matchLabels:
      app: opa
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app: trino-coordinator
      ports:
        - protocol: TCP
          port: 8181
